*   cc: "site.cc-by-nc-nd"

--- a/_i18n/en/_posts/2021-02-24-健保卡的數位轉型.md
+++ b/_i18n/en/_posts/2021-02-24-健保卡的數位轉型.md
@@ -7,6 +7,7 @@
   category: "blog"
   tags: 
     - "Open Government"
+  cc: "site.cc-by-nc-nd"
 ---
 
 People line up patiently to buy medical masks in a pharmacy in Taiwan. They hand in their National Health Insurance (NHI) Cards to the pharmacist at the counter one after another. The pharmacist then inserts the NHI Card into the card reader, verifies the identity of the cardholder, and hands out the masks. Each purchase is completed within 10 seconds.
