--- a/_i18n/en/_posts/2021-04-23-社創合作-邁向淨零.md
+++ b/_i18n/en/_posts/2021-04-23-社創合作-邁向淨零.md
@@ -7,6 +7,7 @@
   category: "blog"
   tags: 
     - "Social Innovation"
+  cc: "site.cc-by-nc-nd"
 ---
 
 The Asia Pacific Social Innovation Summit was held April 10 to 11. During the successful event, the third annual Asia Pacific Social Innovation Partnership Award (APSIPA) honored 10 outstanding projects.
