--- a/_i18n/en/_posts/2021-07-18- 1922 疫苗預約系統.md
+++ b/_i18n/en/_posts/2021-07-18- 1922 疫苗預約系統.md
@@ -8,6 +8,7 @@
   tags: 
     - "Social Innovation"
     - "Open Government"
+  cc: "site.cc-by-nc-nd"
 ---
 
 After the national epidemic alert was raised May 19 to Level 3, the public dilligently complied with guidelines over the next two months. Starting June 25, Taiwan’s new daily confirmed cases dropped to double-digits. By mid-July, the Central Epidemic Command Center announced a number of easing measures to minimize public fatigue. This is widely seen as step toward preparing for a possible lifting of the alert in the coming weeks.
