--- a/_i18n/en/_posts/2021-08-26-省力安心的簡訊實聯制.md
+++ b/_i18n/en/_posts/2021-08-26-省力安心的簡訊實聯制.md
@@ -8,6 +8,7 @@
   tags: 
     - "Social Innovation"
     - "Open Government"
+  cc: "site.cc-by-nc-nd"
 ---
 
 After the 1922 SMS contact tracing system was released in May, it quickly became part of daily life in Taiwan. Using a smartphone's built-in camera without an additional app, the simple and easy sytem is now an intuitive habit for most people visiting public spaces.
