--- a/_i18n/en/_posts/2021-09-27-疫後振興-人人有ㄗㄜˊ.md
+++ b/_i18n/en/_posts/2021-09-27-疫後振興-人人有ㄗㄜˊ.md
@@ -7,6 +7,7 @@
   category: "blog"
   tags: 
     - "Social Innovation"
+  cc: "site.cc-by-nc-nd"
 ---
 
 Since Taiwan raised its national pandemic alert in May, consumption patterns have undergone tremendous change. As physical channels and on-site activities are constrained, finding ways to create new opportunities for products and services are the top priority in all sectors of the economy.
