--- a/_i18n/en/_posts/2021-06-21-協力合作-通往永續.md
+++ b/_i18n/en/_posts/2021-06-21-協力合作-通往永續.md
@@ -7,6 +7,7 @@
   category: "blog"
   tags: 
     - "Social Innovation"
+  cc: "site.cc-by-nc-nd"
 ---
 
 Since the outbreak of coronavirus at the end of 2019, there has been over 170 million cases of infection and 3.74 million deaths worldwide. Having taken various 
