--- a/_i18n/en/_posts/project/2021-11-17-yda.md
+++ b/_i18n/en/_posts/project/2021-11-17-yda.md
@@ -1,21 +1,21 @@
 ---
   layout: "project"
-  title: "Policy history of the website revision of the Youth Administration of the Ministry of Education"
+  title: "Ministry of Education Youth Development Administration Website Revamp: Policy Co-creation Process"
   excerpt: "I would like to know how young friends can use the UI (user-centered) profession of young friends to work together with non-governmental external members, government ministries, and government outsourcing companies in the process of contracting, and rebuild the old website. Does Lapi revamp the new official website of the Youth Department? Let us understand the transition and experience of the entire cooperation process!"
   image: "/assets/imgs/8ad4c1fb383f98230de28753257d73e295c11bb7.jpeg"
-  author: "薛雅婷"
+  author: "Wendy Hsueh"
   category: "project"
   tags: 
-    - "青年參與"
-    - "社會創新"
-    - "開放政府"
-    - "公私協力"
-    - "使用者體驗"
-    - "跨域合作"
+    - "Youth Engagement"
+    - "Social Innovation"
+    - "Open Government"
+    - "Public-Private Partnership"
+    - "User Experience"
+    - "Cross-Sectoral Collaboration"
 ---
 
 
-## If you are also a young man from 18 to 35 years old? 
+## If you are also a young person from 18 to 35 years old? 
 
 The Youth Development Agency of the Ministry of Education (hereinafter referred to as the “Youth Agency”) provides a “Public Sector Internship Program” every year in order to strengthen the ability of college students to enter the workplace to help students understand the operation and organization of government departments through public sector internships The process of cultural and public policy formation encourages young people to gain first-hand experience through actual participation, unveil the mystery of entering the public sector, and create opportunities for future participation in public affairs. 
 
@@ -29,11 +29,11 @@ Since then, RAY2.0 and 3.0 will be launched every summer vacation, and the websi
 
 Because one of the students of RAY 4.0 in 2020, the website of the Youth Department was the target of improvement, and the prototype of the website was completed during the internship . Therefore, when the revision work started, the Youth Department invited the four RAY 4.0 students (Huang Caiyuan, Weng Xuanqi, Yang Bozhi, Luo Wanting) to jointly develop and design with the manufacturer, except for the use of the iterative process in the RAY 4.0 project. The “prototype” produced was incorporated into the interview results of the “User Needs Test”, and repeated design, communication, and testing were conducted with the manufacturer. After three months of full dialogue, the Youth Agency, RAY 4.0, the manufacturer, and PDIS joined forces. Efforts to complete the revision of the new website. 
 
-## Policy resume-- Through interactive methods, the transition process of the meeting is concretely presented They are all recorded 
+## Policy Co-creation Process -- Through interactive methods, the transition process of the meeting is concretely presented They are all recorded 
 
 Just like the production and sales history of agricultural products, through the combination of pictures and texts, and equipped with interactive games, forming a complete policy history. Through the participation of young people in the operation of the government, the practice of adopting young people&#39;s analysis and opinions, the promotion of government&#39;s digital services, the successful establishment of collaborative cases, the continuous fermentation of positive influence, and the classic model of government and youth cooperation. 
 
-<a href="https://pdis.tw/3CAu4J3" target="_blank">Policy history</a>
+<a href="https://pdis.tw/3CAu4J3" target="_blank">Policy Co-Creation Process</a>
 
 <a href="https://pdis.tw/3CAu4J3" target="_blank">
   <img src="/assets/imgs/3161168273335d691f4697019be3768cc0b56057.png" class="responsive-image" alt="cover"/>
