--- a/_i18n/en/_posts/project/2021-11-17-yda.md
+++ b/_i18n/en/_posts/project/2021-11-17-yda.md
@@ -1,7 +1,7 @@
 ---
   layout: "project"
   title: "Ministry of Education Youth Development Administration Website Revamp: Policy Co-creation Process"
-  excerpt: "I would like to know how young friends can use the UI (user-centered) profession of young friends to work together with non-governmental external members, government ministries, and government outsourcing companies in the process of contracting, and rebuild the old website. Does Lapi revamp the new official website of the Youth Department? Let us understand the transition and experience of the entire cooperation process!"
+  excerpt: "Would you like to know how young professionals can put their user-centered expertise to work as an external force, with government ministries and vendors during an ongoing contract, and rebuild an old website -- revamping the official website of the Youth Department? Let us understand the transition and experience of the entire co-creation process!"
   image: "/assets/imgs/8ad4c1fb383f98230de28753257d73e295c11bb7.jpeg"
   author: "Wendy Hsueh"
   category: "project"
