--- a/_i18n/en/_posts/2021-11-26-群眾智造-共享創新.md
+++ b/_i18n/en/_posts/2021-11-26-群眾智造-共享創新.md
@@ -1,25 +1,24 @@
 ---
   layout: "post"
-  title: "Intelligent creation by the masses, sharing innovation"
-  excerpt: "The resources and wisdom assembled by energetic citizens are the best opportunity to turn the future."
+  title: "Overturning the future, collectively"
+  excerpt: "We need to experiment with social innovation based on collective action facilitated by digital technology."
   image: "/assets/imgs/2111010247169917575720.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+In the fall 2021 issue of "Stanford Social Innovation Review", Professors Johanna Mair and Thomas Gegenhuber, both from Germany, stated that amidst severe challenges brought about by COVID-19, humankind needs a pragmatic, flexible and large-scale model for reinvigorating societal infrastructure. They highlighted the "need to experiment with social innovation based on collective action facilitated by digital technology."
 
-In the ⟪Stanford Social Innovation Review⟫ in the fall of 2021, Johanna Mair & Thomas Gegenhuber from Germany believed that: in the severe challenges brought by the epidemic, humans need pragmatic, flexible, and scalable) to revive the infrastructure of society. The two professors pointed out: "We need to carry out social innovation experiments on the basis of shaping group actions through digital technology."
+I wholeheartedly agree with and commend this message. In Taiwan, through collaboration between the social and public sectors, ideas and innovations have been sourced and implemented with concrete results. These include the SMS-based contact tracing system, 1922  vaccination appointment system and the 5000 Quintuple Stimulus Vouchers, all of which are social innovations resulting from collaboration with key stakeholders.
 
-For this passage, I deeply feel the same. In Taiwan, through the concerted efforts of the public and government departments, we gathered opinions and digital technologies from all parties and implemented them into concrete results. For example, the newsletter system, the publicly funded vaccine reservation system, and the five-fold coupon are all social innovations born under the cooperation of multiple stakeholders. 
+British economist Dr. Geoff Mulgan once said that with the popularization of information technology, a civil society in a free and open environment, as well as the resources and wisdom brought together by energetic citizens, are the best opportunities to overturn the future. Whether it is an innovative and entrepreneurial organization, or the masses who use mobile phones to scan QR Codes, all can contribute to changing society. This is the best example of "collective intelligence."
 
-As British economist Dr. Geoff Mulgan (Zhou Ruogang) said: With the popularization of information technology, a civil society in a free and open environment, and the resources and wisdom gathered by vibrant citizens are the best to turn the future. Chance. Whether it is an innovative and entrepreneurial organization, or the masses who use the mobile phone to scan the system, they can contribute and change society. This is the best example of "collective intelligence." 
+On the fourth anniversary of the Social Innovation Lab, the Small and Medium Enterprise Administration of the Ministry of Economic Affairs selected the theme "Collective Intelligence." By incorporating the word "intelligence（智)," which is a homophone of "production（製）" in Mandarin, the term highlights the combined intelligence of collective actions breaking through the siloes in traditional departments, and co-creating effective and practical solutions to social problems via cross-discipline connections.
 
-Therefore, on the fourth anniversary of the "Social Innovation Experimental Center", the SME Division of the Ministry of Economic Affairs named the theme "Intelligent Creation by the Masses", highlighting the wisdom of collective action, breaking through the dilemma of the division of labor in traditional departments, and through interdisciplinary Connect, and propose practical solutions to social problems. 
+Encapsulating the spirit of "Collective Intelligence in Practice", the anniversary celebration aims to create a hub where everyone can speak freely and channel creativity. For three days starting Nov. 26, in addition to physical activities such as workshops, real-world puzzle games and concerts, all lectures -- including the experience sharing the Asia-Pacific Social Innovation Partnership Award, demo discussions of Taiwanese social innovation groups and discussing the government's progress regarding the promotion of corporately responsible consumption -- will be held physically and online.
 
-In the name of "Made by the Masses", the original intention of this anniversary celebration is to become a hub where everyone can speak freely and bring together creativity. It will last three days from 11/26. In addition to physical activities such as workshops, real-world puzzle games, and concerts, there are also the experience sharing of the Asia-Pacific Social Innovation Cooperation Award, the demo exchanges of the Taiwanese social innovation team, and the government's promotion of corporate responsibility consumption The lectures, including the effectiveness of, will be combined online and offline, and will be interactively conducted in the social innovation center entity and online space. 
+In addition, the social innovation market and exhibition will break the time and space constraints for the first time and move to [Gather Town](https://gather.town/app/OpSG6nKGfIZ1MfCa/SDGS2021A) for 24 hours a day starting from Nov. 26. This approach reflects the phrase "reality is just another window." Anyone can enter the booths at Gather Town, or switch to offline to go to the Social Innovation Lab at any time. Everyone can set their own space and create a unique reality. This is the core concept of shared reality.
 
-In addition, this social innovation market and exhibition also broke time and space constraints for the first time and moved to [Gather Town](https://gather.town/app/opsg6nkgfiz1mfca/sdgs2021a). Starting from 11/26, 24 hours a day. I think this approach reflects the phrase "Reality is just another window". Anyone can enter Gather Town at any time to visit the booth in reality, or switch to offline to enter the social innovation center at any time. Everyone can set their own space and create a unique reality. This is the core concept of "Shared Reality". 
-
-As Professor Mair & Gegenhuber said, through digital technology to shape group actions, promote social innovation to the next stage; the anniversary celebration of the Social Innovation Experimental Center, through a series of activities to cross the space barriers, create an integrated virtual reality The field of practice starts from the physical foothold of Taiwan's Social Innovation Organization and becomes an experimental field where social innovations of the world gather and exchange. From November 26th to 28th, "Made by the Masses", you are welcome to join us. 
+As Professors Mair and Gegenhuber said, shaping group actions through digital technology will take social innovation to the next level. The anniversary of the Taipei Social Innovation Lab, through a series of activities, crosses barriers and creates a space for physical and virtual integration. Started as a gathering site for Taiwan's social innovation organizations, the lab will transform into a testing ground for globally minded innovators to gather and exchange. From Nov. 26 to 28, join us in the "Collective Intelligence" ecosphere.
