--- a/_i18n/en/_posts/2021-12-01-數位民主在臺灣.md
+++ b/_i18n/en/_posts/2021-12-01-數位民主在臺灣.md
@@ -1,40 +1,39 @@
 ---
   layout: "post"
-  title: "Digital democracy in Taiwan"
-  excerpt: "Gather the power of everyone to create a tough and tolerant Indo-Pacific region."
+  title: "Digital Democracy in Taiwan"
+  excerpt: "Crowdsourcing for an Inclusive and Resilient Indo-Pacific."
   image: "/assets/imgs/flower-field-gabaf6792c_1280.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Frances Feng"
   category: "blog"
   tags: 
-    - "開放政府"
-    - "社會創新"
+    - "Open Government"
+    - "Social Innovation"
 ---
 
+COVID-19 has stress-tested democracies across the world, and the results have left something to be desired. Many democracies, including those in the Indo-Pacific, have been revealed as flawed and failing – either grasping for authority or gasping for relevance. Is this really surprising, though, given that we have done so little to modernise these institutions that stretch back to ancient Athens? 
 
-The epidemic has conducted stress tests on democracies around the world, and the results seem to be unsatisfactory. Including the Indo-Pacific region, the plight of many democracies is fully revealed: falling into an authoritarian model, or struggling for meaning. This does not seem surprising. After all, the world did not put much effort into "democracy", a system that can be traced back to ancient Greece, to keep it up with the times. 
+Taiwan, by contrast, has shown us how we can strengthen and deepen democracy across the Indo-Pacific with citizen engagement. To ensure that democracies continue to flourish, we need to re-empower our populations and make our institutions fit for the world in which we live. In an Indo-Pacific where democracy is often said to be in backslide, we have an opportunity to reverse the trend to create a more open and democratic region. 
 
-In contrast, Taiwan has demonstrated how to use citizen participation to strengthen and deepen democracy in the Indo-Pacific region. For democracy to continue to grow strong, we must first re-empower the people and make the system more suitable for the world in which we live. Although it is often said that democracy in the Indo-Pacific region is retrogressive, we still have the opportunity to reverse the situation and create a more open and democratic region. 
+Taiwan’s transformation to a digital democracy took place within a generation. Since World War II, the country has remade itself from a relatively simple agricultural society, with power concentrated in the hands of the ruling party, to a state characterised by social, cultural and political pluralism. Our first direct presidential election was held in 1996, right after the popularisation of the World Wide Web. In Taiwan, the internet and democracy evolved and spread in tandem. 
 
-Taiwan’s digital democratic transformation was completed in a single generation. After World War II, Taiwan transformed from a relatively pure agricultural society with the ruling party's authority to a country characterized by social, cultural, and political diversity. We held the first direct presidential election in 1996, just when the World Wide Web became universal. In Taiwan, the Internet and democracy have developed and spread simultaneously. 
+In 2014, there was a definitive moment in Taiwan’s democratic invigoration: the birth of the Sunflower Movement. Half a million people took to the streets to protest the Cross-Strait Service Trade Agreement, an opaque trade deal with Beijing; millions more people supported them online as the movement fanned out across the country, and Taiwan’s parliament was occupied by citizens seeking to stop the progress of the legislation.
 
-Taiwan’s democratic revitalization ushered in a decisive moment in 2014, which was the birth of the Sunflower Student Movement. Half a million people took to the streets to protest the signing of an opaque cross-strait service trade agreement with Beijing. As the student movement spread across the country, millions of netizens responded online, and the people occupied Taiwan's Legislative Yuan to prevent the bill from proceeding. 
+In the first few days, rumours and misinformation spread about what was occurring inside the besieged parliament. To ensure openness and transparency, I was there to help set up a system of communication, as were many from the decentralised “g0v community” (pronounced gov-zero), a group of civic hackers. The occupied area and the surrounding streets were connected in a local network, and a projector was set up outside parliament to show what was happening inside in real time.
 
-In the first few days, various rumors and false messages about the siege of the Legislative Yuan were spread. In order to ensure openness and transparency, I assisted in the establishment of a communication system. Many partners from the g0v zero-time government (decentralized citizen hacker group) participated in it. The occupied area and the neighboring streets are connected by a local network, and a projection screen is set up outside the courtyard to simultaneously broadcast the live situation in the courtyard. 
+The Sunflower Movement ended a little more than three weeks later, after the government promised greater legislative oversight of the trade pact. It was a successful public demonstration of a new version of governance, not only for Taiwan but also for the world, showing how a citizens’ assembly, assisted by professional facilitators and empowered by civic technologies, can lead to effective democratic action. Today, citizens in Taiwan understand that democracy – like any social technology – is enriched when people work together to improve society. 
 
-About three weeks later, after the government agreed to strengthen the legislative supervision of the service trade agreement, the Sunflower student movement successfully exited. This has successfully demonstrated a new governance model not only to Taiwan, but also to the world, that is, citizen gatherings, with the assistance of professional guides and the empowerment of citizens' technology, can lead to effective democratic actions. Today, the people of Taiwan understand that democracy, like any social technology, can be enriched with the joint efforts of the public. 
+How can a government facilitate this? By harnessing the energy spread across sectors as a driving force for policy innovation, and by allowing the concept of “working with the people” to permeate public policymaking. In other words, by unleashing the power inherent in the “crowdsourcing” of democracy. When it comes to solving problems, a government should not look to formulate top-down policies, dictating paths to direct people to public services, but should instead build Public–Private–People partnerships that are guided directly by the needs of the people.
 
-So how does the government contribute to such an outcome? The answer is that the integration of cross-departmental energy has become the driving force for policy innovation, and the concept of "cooperating with the people" can penetrate into the formulation of public policies. In other words, it is to release the inner power of democratic "crowdsourcing". The government should no longer seek to formulate policies from top to bottom and guide people’s access to public services. Instead, they should establish an ecosystem that is oriented to the needs of the people and solves problems through public-private-people partnerships (Public-Private-People partnerships). 
+Taiwan continually implements programs to encourage these partnerships. The country’s Presidential Hackathon, now in its fourth year, invites citizens from around the world to propose open-data solutions to global issues that will create a more sustainable world – including ways to reduce energy use, to empower smart citizens and to promote investment in circular agriculture. The event is an opportunity for the social, public and private sectors to collaborate on digital innovations that link data across sectors in ways that resolve social problems. The winning teams are invited to participate in government initiatives, and the systems that they develop receive support from the public and/or private sectors, as appropriate.
 
-Taiwan continues to promote plans to encourage such partnerships. In its fourth year, the "Presidents Cup Hackathon" invites citizens from all over the world to use open data to propose solutions to global issues that are conducive to creating a sustainable world, such as energy conservation, smart citizens, and circular agriculture. The winning team is expected to be invited to participate in government projects, and the system developed may also receive assistance from the public sector and/or the private sector. 
+Another democratic innovation, the one-stop participation platform join.gov.tw, enables members of the Taiwanese public to lodge petitions. Ministries hold face-to-face meetings twice a month to explore ways to incorporate petitions with more than 5000 signatures into policymaking, ensuring that everyone can help to set the agenda and feed into government decision-making. In fact, more than a quarter of citizens’ initiatives have been started by those under the age of eighteen – for example, the petition to ban plastic straws in Taiwan was created by a seventeen-year-old girl.
 
-Another democratic innovation in Taiwan is the "Public Policy Network Participation Platform" (join.gov.tw), which is a one-stop participation platform where people in Taiwan can make policy suggestions. As long as more than 5,000 people seconded, they can discuss how to incorporate proposals into policies through inter-ministerial collaboration meetings twice a month, ensuring that everyone can help formulate the agenda and participate in the government's decision-making process. In fact, more than a quarter of the proposals were made by young friends under the age of 18. For example, the proponent of restricting the use of plastic straws was only 17 years old. 
+Cross-sector partnerships also play an important role in Taiwan’s success against COVID-19. In early 2020, when Taiwan was short on face masks and individuals were panic-buying, my government instituted a national rationing scheme. Anticipating that rationing would not stop runs on pharmacies, we also released an application programming interface to provide the public with real-time, location-specific data on mask availability. This led to the creation of the Mask Map, a series of interactive maps offering details about where masks are in stock and their numbers, created by social entrepreneurs working with the g0v community.
 
-Taiwan has successfully combated the COVID-19 epidemic, and inter-departmental partnerships have also played an important role. At the beginning of 2020, there was a shortage of masks in Taiwan, which caused panic buying. The Taiwan government adopted real-name mask quota measures. However, despite the adoption of quota measures, the public will inevitably still need to go to the pharmacy to purchase, so we released an application programming interface (API) to provide the public with real-time mask stocks in specific locations. The mask map created by social entrepreneurs in cooperation with the g0v community came into being, which is a variety of interactive maps, telling the public where and how many masks there are. 
+Similarly, early measures to record the contact information of those entering or leaving public venues led to the quick development and implementation of the 1922 SMS contact tracing system. The intuitive, app-free design by g0v is an easy way to check-in at public places while maintaining one’s privacy – anyone can register their phone number to see whether a contact tracer has accessed their data in the last twenty-eight days.
 
-Similarly, the various measures to record contact information when entering and exiting public places in the early days also contributed to the development and deployment of the "1922 Newsletter System" in the shortest possible time. This intuitive, download-free APP design comes from g0v, which can easily complete the real connection registration, while taking into account privacy-anyone can find out whether they have been queried by the epidemic in the past 28 days by entering a phone number. 
+Since the early days of the internet, Taiwan has boasted a vibrant community of civic hackers and open-source programmers who engage with social issues – individuals who stand ready to further democratic endeavours and fight against authoritarian forces. Taiwan shows that, by trusting the people and by lowering barriers to democratic participation, we can create innovations that stand the test of time.
 
-From the early days of the Internet, active citizen hackers and open source engineers have actively participated in social issues, and are always ready to promote democracy and fight against authoritarianism. Taiwan has proved that by trusting the people and lowering the barriers to democratic participation, it can create innovations that stand the test of time. 
+The solution for the Indo-Pacific is simple: stop the rhetoric and start designing spaces for people to participate.
 
-My solution to the Indo-Pacific region is very simple: instead of sitting, it is better to design a space where more people can participate. 
-
-In the face of challenges that transcend borders, people from different fields must work together to gradually overcome all difficulties. In my opinion, Taiwan’s digital democracy is like a sunflower, and each contributor is a piece of petal, blooming and standing tall in Taiwan, becoming a forgiving and resilient Indo-Pacific vision. 
+When faced with challenges that transcend state and national borders, people from different sectors must work together, step by step, to tackle them. I see Taiwan’s digital democracy as a sunflower, with those who contribute as petals. It blooms in Taiwan and stands tall as a vision for an inclusive and resilient Indo-Pacific.
