--- a/_posts/2021-12-01-數位民主在臺灣.md
+++ b/_posts/2021-12-01-數位民主在臺灣.md
@@ -3,7 +3,7 @@ layout: post
 title: 數位民主在臺灣
 excerpt: 集合眾人之力，打造堅韌涵容的印太地區。
 image: /assets/imgs/flower-field-gabaf6792c_1280.jpg
-author: 唐鳳、彭筱婷
+author: 唐鳳、馮瓊儀
 category: blog
 tags:
   - 開放政府
