--- a/_i18n/zh-TW/_posts/project/2021-11-17-yda.md
+++ b/_i18n/zh-TW/_posts/project/2021-11-17-yda.md
@@ -24,6 +24,8 @@ tags: [青年參與, 社會創新, 開放政府, 公私協力, 使用者體驗, 
 
 ## 政策履歷 -- 透過互動方式，讓會議的轉折過程都具體呈現
 
+「政策履歷」記錄各方利益關係人之間，如何透過多樣化的合作共創，來改善與社會需求相對應的公共政策與服務。它不是靜態的記錄，而是隨時動態更新，透過共通的脈絡，來增進公眾參與和分散式決策。 
+
 PDIS 全程參與新網站的改版過程，將會議討論的重點、轉折決定的過程、分析使用的工具都記錄下來，如同農產品的產銷履歷，透過圖文並陳，並搭載互動的遊戲方式，形塑完整的政策履歷。藉由青年參與政府的運作、實踐採納青年的分析與意見，提升政府的數位服務，成功樹立協作案例，讓正面影響力持續發酵，成為政府與青年協力合作的經典典範。
 
 <a href="https://pdis.tw/3mqBFVv" target="_blank">政策履歷</a>
