--- a/_i18n/en/_posts/project/2021-11-17-yda.md
+++ b/_i18n/en/_posts/project/2021-11-17-yda.md
@@ -29,9 +29,9 @@ Since then, RAY2.0 and 3.0 will be launched every summer vacation, and the websi
 
 Because one of the students of RAY 4.0 in 2020, the website of the Youth Department was the target of improvement, and the prototype of the website was completed during the internship . Therefore, when the revision work started, the Youth Department invited the four RAY 4.0 students (Huang Caiyuan, Weng Xuanqi, Yang Bozhi, Luo Wanting) to jointly develop and design with the manufacturer, except for the use of the iterative process in the RAY 4.0 project. The “prototype” produced was incorporated into the interview results of the “User Needs Test”, and repeated design, communication, and testing were conducted with the manufacturer. After three months of full dialogue, the Youth Agency, RAY 4.0, the manufacturer, and PDIS joined forces. Efforts to complete the revision of the new website. 
 
-## Policy Co-creation Process -- Through interactive methods, the transition process of the meeting is concretely presented. They are all recorded.
+## What is Policy Co-creation Process?
 
-The policy co-creation process aims to provide a transparent track record regarding the diverse collaboration and co-creation among all stakeholders who improve public policy or services corresponding to societal needs. It is not a static record but rather dynamic -– to increase public participation and distributed decision-making through shared contexts.
+The Policy Co-creation Process aims to provide a transparent track record regarding the diverse collaboration and co-creation among all stakeholders, on public policy and service improvements corresponding to societal needs. It is not a static record but rather dynamic -– to increase public participation and distributed decision-making through a shared context.
 
 Just like the production and sales history of agricultural products, through the combination of pictures and texts, and equipped with interactive games, forming a complete policy history. Through the participation of young people in the operation of the government, the practice of adopting young people&#39;s analysis and opinions, the promotion of government&#39;s digital services, the successful establishment of collaborative cases, the continuous fermentation of positive influence, and the classic model of government and youth cooperation. 
 
