--- a/_i18n/en/_posts/2021-12-07-打造設計系統-提升政府網站使用者體驗.md
+++ b/_i18n/en/_posts/2021-12-07-打造設計系統-提升政府網站使用者體驗.md
@@ -14,13 +14,13 @@ When using government digital services such as tax payment systems in the past, 
 Before working in the Executive Yuan, I also often encountered problems such as poor experience of government websites and low ease of use, such as poor mobile phone support, low logic of information architecture, lack of functionality, and non-compliance with universal design. Or, the font, typesetting, and color matching on the interface cannot meet the various and increasing needs of the people, and it also affects the mutual trust between the people and the government. 
 In recent years, in order to provide a more consistent and smooth user experience, many governments and enterprises have begun to develop their own website design systems (Design System). What is a design system? It is just like a specification book for website planning. It not only defines principles and styles, including colors, layout or spacing, but also provides reusable components. FlatUI as shown in the figure below provides buttons, input boxes, and drop-downs. Elements such as menus, navigation bars, and progress bars; some are also standardized to interactive patterns to provide the best solutions in specific situations, such as forms, how to display error pages, and so on. Using the same interface structure can make different websites have consistent styles and designs, and adopting a similar logical information structure can effectively reduce the learning cost of users and make it easier for the public to use the website. 
 
-![Components provided by 20211203-FlatUI. (Intercepted from FlatUI)](https://image.cache.storm.mg/styles/smg-800xauto-er/s3/media/image/2021/12/03/20211203-045557_u20101_m730487_78ab.png?itok=erfsxwe6 "20211203 -components provided by flatui. (intercepted from flatui)")
+![Components provided by FlatUI.](https://image.cache.storm.mg/styles/smg-800xauto-er/s3/media/image/2021/12/03/20211203-045557_U20101_M730487_78ab.PNG?itok=ERFsxWE6 "Components provided by FlatUI.")
 
 [Design System](http://[https://design-system.service.gov.uk/) launched by british gds, which is a very good example. when you click on the homepage, you can immediately feel its strong style. blue and black are the main color systems, and specifications and examples of various styles, components, and modes are provided. designers and developers only need to meet these conditions. can create a government website with "british government style." this design system is widely used in other government websites, including [government homepage](https://www.gov.uk/), [open information platform](https: //data.gov.uk/), [epidemic information](https://coronavirus.data.gov.uk/) and so on. Although the functions of each website are different, they can still show the overall style, not only well-established Brand image, users are also easier to use the same design system website.
 
-![20211203-British government design system. (Intercepted from the British GDS design system website)](https://image.cache.storm.mg /styles/smg-800xauto-er/s3/media/image/2021/12/03/20211203-045557_u20101_m730489_f8ef.png?itok=vt2ldo52 "20211203-uk government design system. (intercepted from the uk gds design system website)")|
+![British government design system.](https://image.cache.storm.mg/styles/smg-800xauto-er/s3/media/image/2021/12/03/20211203-045557_U20101_M730489_f8ef.PNG?itok=VT2ldO52 "British government design system.")
 
-![20211203- Epidemic Information. (Intercepted from Epidemic Information Platform)](https://image.cache.storm.mg/styles/smg-800xauto-er/s3/media/image/2021/12/03 /20211203-045557_u20101_m730488_5023.png?itok=r64p18ij "20211203- epidemic information. (intercepted from epidemic information platform)")
+![Epidemic information.](https://image.cache.storm.mg/styles/smg-800xauto-er/s3/media/image/2021/12/03/20211203-045557_U20101_M730488_5023.PNG?itok=r64p18ij "Epidemic information.")
 
 The PDIS team in our office continues the previous work that RAY and young students jointly inspected and improved digital services on government websites The spirit, extending from a single point to a comprehensive, is now working with a new batch of interns to develop "Government Website Design System". We hope to incorporate more elements that belong to Taiwan, and refer to common UI frameworks, and take stock of issues that easily cause confusion for users. 
 
